--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "author": "Andresch-dev",
     "license": "ISC",
     "dependencies": {
+        "bcrypt": "^4.0.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "mongoose": "^5.9.11",
+        "mongoose-unique-validator": "^2.0.3",
+        "underscore": "^1.10.2"
     }
 }
